# ApprovalTests.cpp

./: README.md  mdsnippets.json  run_markdown_templates.sh
doc/: BuildingDocumentation.md  CMakeLists.txt  Namers.md  PathToApprovalTesting.md  Reporters.md  TestingSingleObjects.md
doc/how_tos/: ToggleDeprecatedCode.md  UseACustomReporter.md
doc/images/source/: mdsnippets_flow.dot
doc/run_mdsnippets/: CMakeLists.txt
